# cprog

./: .gitignore  0_задания на практику.md  5_complex_number.md  README.md  list.cpp  matr_vect.cpp  matrix_class.cpp  matrix_mult.cpp  merge_sort.cpp  pointer.cpp  text_files2.cpp.bak  задания на практику.md
1sem/: .gitignore  0_program1.md  1_сем_C++.docx  files.cpp  lec1.md.bak  lec10.md  lec13.md  lec2.md  lec2.md.bak  lec4.md  lec5.md  lec8.md  mergesort.cpp  program1.md  program1.md.bak  tasks.md  temp.md  text_files2.cpp  ~$сем_C++.docx
1sem/IfEx/: IfEx.sln
1sem/array_example/: main.cpp
1sem/assert_example/: main.cpp  main_assemb.txt  main_prep.cpp
1sem/file_ex/: file_ex.sln
1sem/func_ex/: func_ex.sln
1sem/hello_world_example/: main.cpp
1sem/list/: main.cpp
1sem/list_ext/: main.cpp
1sem/merge_sort/: merge_sort.sln
1сем/: program1.md
2sem/: file.txt  lect_test.md  practice.md  program.md  program2.md  program2.md.bak  program3.md  program3.md.bak  sort1.cpp
3sem/: string_ex.cpp  test_array.cpp  test_matrix_vector.cpp  test_minmax.cpp  test_mymatrix.cpp  test_myvector.cpp  test_set.cpp  задачи.txt  задачи.txt.bak
3sem/MyString/: CMakeLists.txt  String.cpp  String.h  hello.cpp  hello.h  main.cpp
3sem/MyString/build_cl/: CMakeCache.txt  Makefile  cmake_install.cmake
cours_1/: main.cpp
cuda_pr/: cuda_pr.sln
matrix/: matrix.cpp
queue/: queue.sln
set_pr/: set_pr.sln
task/: 3_complex_number.md
test_omp/: test_omp.sln
trees_simple_pr/: trees_simple_pr.sln
union_pack/: union_pack.sln
vs_test/: CMakeLists.txt
(+658 files in other folders)
